# volsa2

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
proptest-regressions/: seven_bit.txt
src/: audio.rs  bak.domain.rs  device.rs  domain.rs  layout.yaml  main.rs  opt.rs  proto.rs  seven_bit.rs  util.rs
src/domain/: backup.rs  sample_slots.rs
src/proto/: header.rs  sample.rs  system.rs
test_data/: sample1.wav.raw  sample10.wav.raw  sample11.wav.raw  sample12.wav.raw  sample13.wav.raw  sample14.wav.raw  sample2.wav.raw  sample3.wav.raw  sample4.wav.raw  sample5.wav.raw  sample6.wav.raw  sample7.wav.raw  sample8.wav.raw  sample9.wav.raw  sample_data_dump1.raw  sample_data_dump10.raw  sample_data_dump11.raw  sample_data_dump12.raw  sample_data_dump13.raw  sample_data_dump14.raw  sample_data_dump2.raw  sample_data_dump3.raw  sample_data_dump4.raw  sample_data_dump5.raw  sample_data_dump6.raw  sample_data_dump7.raw  sample_data_dump8.raw  sample_data_dump9.raw
